Refactor user model to use UUID for identifiers and update related classes for consistency